css/custom.css
*{
    box-sizing: border-box;
}

html, body{
    font-family: 'Roboto', sans-serif;
    height: 100%;
    margin: 0;
    padding: 0;
    line-height: 1.5rem;
    scroll-behavior: smooth;
}

a, a:hover, a:visited, a:active {
    color:inherit;
    text-decoration: none;
}
.nav {
    justify-content: center;
    position: absolute;
    background-color: transparent;
    margin-top: 2em;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    color: white;
    font-size: 1.375em;
}

.introduction {
    max-width: 680px;
    border-radius: 20px 20px 0 0;
    box-shadow: 0 -3px 3px rgba(0,0,0,0.07);
    background-color: white;
    padding: 1.5em;
    padding-top: 1em;
}
.name{
    font-weight: 500;
    margin-bottom: 5px;
}
.subtext {
    font-size: 1.5rem;
    padding-top: 3rem;
    color: white;
}
.title {
    color: #29B6F6;
}
.computer {
    width: 130px;
    float: left;
}
.headertitle {
    margin-top: 5rem;
    margin-bottom: 5rem;
}
.subheader {
    margin: 0;
    font-size: 1.1em;
    font-weight: 500;
}
.underline {
    border: 0;
    border-top: 2px solid #29B6F6;
    height: 1px;
    margin-top: 4px;
    width: 30px;
}
.skilled {
    font-size: 1.1em;
}
.skillbg{
    background-color: red;
}
.badge {
    margin-top: 8px;
    margin-left: 3px;
}
.wakatime{
    margin-top: 15vh;
    border-radius: 20px;
    box-shadow: 0 -3px 3px rgba(0,0,0,0.1);
}
.projects {
    padding-top: 10vh;
}
.projectpic {
    width: 600px;
    min-width: 600px;
    box-shadow: 0 5px 20px rgba(86,18,142,.1),0 3px 30px rgba(86,18,142,.2);
    border-radius: 5px;
    transition: transform .2s;
}
    .projectpic:hover {
        transform: scale(1.05);
    }
.projecttext {
    color: #313131;
}
.projectdescription {
    color: #313131;
    font-size: 0.95em;
}
.project1 {
    background-color: #CDDCDC;
    background-image: linear-gradient(to top, #999ff5 0%, #68ccfa 100%);
    background-image: linear-gradient(to bottom, #c2e9fb 0%, #a1c4fd 100%);
    min-height: 600px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.project2 {
    background-image: linear-gradient(to top, #e0c3fc 0%, #bfd3ff 50%);
    min-height: 600px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.project3 {
    background-image: linear-gradient(20deg, #ddd6f3 0%, #faaca8 100%, #faaca8 100%);
    min-height: 600px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.project4 {
    background-image: linear-gradient(to bottom, #c1dfc4 0%, #e8ddec 100%);
    min-height: 600px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.project5 {
    background-image: linear-gradient(to bottom, #bdc2e8 0%, #bdc2e8 50%, #ffffff 100%);
    min-height: 600px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.footer{
    font-size: 1em;
    font-weight: 500;
}
.blue {
    color: #29B6F6;
}
.bg {
    background: url(/img/bg.svg);
    background-repeat: repeat-x;
    background-position: 180%;
    -webkit-background-size: contain;
    -moz-background-size: contain;
    -o-background-size: contain;
    background-size: contain;
    margin-right: 0 !important;
    margin-left: 0 !important;
    z-index: -99;
    padding-top: 10vh;
    width: 100vw;
}
    @media only screen and (max-width: 1400px) {
    .bg {
        background-size: cover;
    }
    }
    @media only screen and (max-width: 990px) {
    .skilled {
        max-width: 100%;
    }
    .projectname {
        padding-top: 1em;
        text-align: center;
    }
    .projecttype {
        text-align: center;
    }
    .projectdescription {
        text-align: center;
    }
    .techstack {
        padding-bottom: 1em;
        text-align: center;
    }
    .projectpic {
        display: block;
        margin-left: auto;
        margin-right: auto;
    }
    .project1 {
        padding-top: 1em;
        padding-bottom: 1em;
    }
    .project2 {
        padding-top: 1em;
        padding-bottom: 1em;
    }
    .project3 {
        padding-top: 1em;
        padding-bottom: 1em;
    }
    @media only screen and (max-width: 700px) {
    .bg {
        padding-left: 10px;
        padding-right: 10px;
    }
    .nav {
        margin-top: 0.5em;
    }
    .project1 {
        padding-top: 2em;
        padding-bottom: 2em;
    }
    .project2 {
        padding-top: 2em;
        padding-bottom: 2em;
    }
    .project3 {
        padding-top: 2em;
        padding-bottom: 2em;
    }
    .projectpic {
        min-width: 400px;
    }
}
    @media only screen and (max-width: 450px) {
        .projectpic {
            min-width: 255px;
        }
    }
    @media only screen and (max-width: 350px) {
        .nav {
            margin-top: 1em;
        }
    }

